<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <Button
        android:id="@+id/ContactsButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:text="@string/Contacts"
        android:textSize="36sp" />

    <Button
        android:id="@+id/ConnectButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:text="@string/ConnectWithVolunteer"
        android:textSize="36sp" />

    <Button
        android:id="@+id/MakeButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:text="@string/Make"
        android:textSize="36sp" />

</LinearLayout>